--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,11 +5,5 @@ sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
+Sorry, but the page you were trying to view does not exist. Click <a href="https://www.youtube.com/watch?v=mwENYk66q6M"> here</a>for cat videos. 
 
-<script>
-  var GOOG_FIXURL_LANG = 'en';
-  var GOOG_FIXURL_SITE = '{{ site.url }}'
-</script>
-<script src="https://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js">
-</script>
